# swift

./: CMakeLists.txt
include/swift-c/Compiler/: Compiler.h  CompilerMacros.h  module.modulemap
tools/: CMakeLists.txt
tools/libSwiftCompiler/: CMakeLists.txt  c-include-check.c  libSwiftCompiler.cpp  libSwiftCompiler.exports
